data/derived/comb/progs/unify/prog8221.ml.out
Characters 61-62:
  | h::t -> h :: t append r;;
                 ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
